# vulnscout

./: .env.example  .gitignore  README.md  hack_instructions.md  install.sh  main.py  mcp_server.py  pyproject.toml  scope.example.json  server.py  setup.sh  tsconfig.json  vs  vulnscout-mcp.service
.github/: secret_scanning.yml
.github/workflows/: build-release.yml
core/: pyproject.toml
core/tests/: test_config_loader.py  test_local_sources.py  test_optional_deps.py  test_proxy_renderer.py  test_runner_root_prompt.py  test_sarif_stride.py
docs/: quickstart.mdx
docs/advanced/: skills.mdx
docs/llm-providers/: bedrock.mdx
docs/usage/: cli.mdx
legacy/: .env.example  README.md  check.py  requirements.txt  vulnscout-mcp.service
legacy/scanner/: claude_loop.py  hunter.py  memory.py
pipeline/: README.md  crawl-targets.ts  on_finding.py  recon-to-targets.ts  seed_instruction.py
recon/: .gitignore  CLAUDE.md  LAUNCH-OwnerMap-r-sysadmin.md  LAUNCH-r-netsec.md  LICENSE  package.json
scanner/: claude_loop.py  hunter.py  repo_scanner.py  report_formatters.py  reporter.py  scope_parser.py  validation_gate.py  webapp_scanner.py
src/: cli.ts
src/checks/: mx.ts  takeover.ts
src/lib/: report.ts  scope.ts  types.ts
strix/config/: models.py  settings.py
strix/interface/: main.py
strix/report/: sarif.py  state.py
strix/runtime/: docker_client.py  session_manager.py
submit/: .gitignore  disclosed_reports.db
tests/: test_cli_target_list.py  test_docker_client_delete.py  test_notes.py  test_sarif.py  test_session_entries.py  test_state_repo_context.py
(+10 files in other folders)
