[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vulnscout"
version = "0.1.0"
description = "AI-powered vulnerability scanner using Claude in an agentic loop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "gitpython>=3.1.40",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.scripts]
vulnscout = "main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*"]
